solved overlap footer

--- a/_sass/klise/_post.scss
+++ b/_sass/klise/_post.scss
@@ -70,6 +70,7 @@
 // Post content
 .page-content {
   padding-top: 8px;
+  padding-bottom: 5em;
 
   iframe {
     text-align: center;
